# SecEthernetDev

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md  authenticator.c  authenticator.h  clean_mitm.sh  clean_netns.sh  linux.config  mitm.c  mitm.h  proof.h  receiver.c  receiver.h  role.c  role.h  sender.c  setup_debugfs.sh  setup_mitm.sh  setup_mitm_recv.sh  setup_mitm_snd.sh  setup_netns.sh
benchmark/: CMakeLists.txt  bench_crypto_puzzle.c  bench_gk_crypto.cpp  bench_time_lock_puzzle.cpp  bench_time_lock_puzzle_encryption.cpp
can_udp/: CMakeLists.txt  analyze_recorded_can.c  udp_client.c
can_udp_raw/: CMakeLists.txt  gk_crypto.c  udp_client_raw.c  udp_client_solver_raw.c  udp_server_raw.c
cmake/: FindLKM.cmake  FindWolfSSL.cmake  GoogleBenchmark.cmake  GoogleBenchmark.cmake.in  KernelModule.cmake
common/: CMakeLists.txt  gk_crypto.c  gk_crypto.h  hashmap.c  hashmap.h  time_lock_puzzle.cpp  time_lock_puzzle.h  wolfssl_ext.c  wolfssl_ext.h
crypto_puzzle/: CMakeLists.txt  bench_crypto_puzzle.c  bench_time_lock_puzzle.cpp  bench_time_lock_puzzle_decryption.cpp  time_lock_puzzle.cpp
data/: can_frames.pcap
kernel_modules/: CMakeLists.txt  Makefile  README.md  authenticator.c  authenticator.h  authenticator_rsa.c  authenticator_rsa.h  mitm.c  mitm.h  proof.h  receiver.c  receiver.h  receiver_dos.c  receiver_dos.h  role.c  role.h  sender.c  sender.h  time_lock_puzzle.c  time_lock_puzzle.h
kernel_modules/mpi/: CMakeLists.txt  generic_mpih-add1.c  generic_mpih-lshift.c  generic_mpih-mul1.c  generic_mpih-mul2.c  generic_mpih-mul3.c  generic_mpih-rshift.c  generic_mpih-sub1.c  longlong.h  mpi-add.c  mpi-bit.c  mpi-cmp.c  mpi-div.c  mpi-inline.h  mpi-internal.h  mpi-inv.c  mpi-mod.c  mpi-mul.c  mpi-sub-ui.c  mpi.h  mpicoder.c  mpih-cmp.c  mpih-div.c  mpih-mul.c  mpiutil.c
lidar_udp/: CMakeLists.txt  lidar_udp_client.c  lidar_udp_server.c
lidar_udp_raw/: CMakeLists.txt  gk_crypto.h  lidar_udp_client_raw.c  lidar_udp_server_raw.c
scripts/: setup_mitm_auth.sh
src/: CMakeLists.txt  udp_client.c  udp_server.c
tesla/: CMakeLists.txt  Makefile  NTP.c  NTP.h  README.md  README.orig  client.c  client.h  defs.h  hashtable.c  hashtable.h  octet_stream.c  octet_stream.h  sample.c  sample.h  sample_client.c  sample_server.c  sender.c  sender.h  tesla.c  tesla.h  tesla_test.c
tesla_can_udp/: CMakeLists.txt  common.h  tesla_udp_client.c  tesla_udp_server.c
tesla_lidar_udp/: CMakeLists.txt  tesla_lidar_udp_client.c  tesla_lidar_udp_server.c
tests/: CMakeLists.txt  test_gk_crypto.cpp  test_tesla.cpp  test_time_lock_puzzle.cpp  test_wolfssl.cpp
